fix some styles on narrow screens

--- a/src/assets/styles/components/about/slider.scss
+++ b/src/assets/styles/components/about/slider.scss
@@ -8,6 +8,14 @@
       bottom: 0px !important;
     }
   }
+  @media (max-height: 680px) and (min-width: 1200px) {
+    .carousel.slide {
+      .carousel-indicators {
+        left: 0 !important;
+        bottom: -60px !important;
+      }
+    }
+  }
   &__arrow {
     height: 60px;
     position: absolute;
