--- a/src/assets/styles/components/team/slide.scss
+++ b/src/assets/styles/components/team/slide.scss
@@ -64,6 +64,9 @@
       width: 90% !important;
       margin: 20px auto;
     }
+    @media (max-height: 680px) and (min-width: 1200px) {
+      height: 50vh;
+    }
     img {
       object-fit: cover;
       width: 100%;
@@ -73,7 +76,8 @@
         height: 65%;
       }
       @media (max-height: 680px) and (min-width: 1200px) {
-        height: 45%;
+        height: 70%;
+        margin-bottom: 10px;
       }
     }
     h1 {
@@ -104,6 +108,9 @@
       height: 30%;
       @include is-mobile {
         height: 0;
+      }
+      @media (max-height: 680px) and (min-width: 1200px) {
+        height: 20%;
       }
       &::-webkit-scrollbar {
         width: 5px !important;
